@@ -18,7 +18,6 @@ import org.springframework.test.web.servlet.MockMvc;
 import org.springframework.test.web.servlet.request.MockMvcRequestBuilders;
 
 import java.math.BigDecimal;
-import java.util.Arrays;
 import java.util.List;
 
 import static org.mockito.Mockito.when;
@@ -219,7 +218,7 @@ public class ClientControllerTest {
 
     @Test
     void shouldReturnClientListWhenRetrievingAllClients() throws Exception {
-        List<ClientGetDto> dtoList = Arrays.asList(
+        List<ClientGetDto> dtoList = List.of(
                 ClientGetDto.builder()
                         .id(1L)
                         .clientName("John Doe")
